{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 84,
  "lineage": "436408e1-16fc-e5d2-f5fa-fbd35a81c74c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cbba5f9aacc0d2b",
            "domain": "vpc",
            "id": "eipalloc-02cbba5f9aacc0d2b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-218-12-171.compute-1.amazonaws.com",
            "public_ip": "44.218.12.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip"
            },
            "tags_all": {
              "Name": "eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myGw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130302470800:internet-gateway/igw-0dce525c952d0e583",
            "id": "igw-0dce525c952d0e583",
            "owner_id": "130302470800",
            "tags": {
              "Name": "vpc_igw"
            },
            "tags_all": {
              "Name": "vpc_igw"
            },
            "vpc_id": "vpc-094aa6f3c274864bc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "myNat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cbba5f9aacc0d2b",
            "association_id": "eipassoc-05b44afee97a4880d",
            "connectivity_type": "public",
            "id": "nat-0e2881ecd8fb9a4e6",
            "network_interface_id": "eni-0be1efb9333ae23b7",
            "private_ip": "172.30.2.160",
            "public_ip": "44.218.12.171",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0723d7d329bf96dbc",
            "tags": {
              "Name": "my-NAT"
            },
            "tags_all": {
              "Name": "my-NAT"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.myGw",
            "aws_subnet.mysubPub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130302470800:route-table/rtb-0e1b91161ef46ed63",
            "id": "rtb-0e1b91161ef46ed63",
            "owner_id": "130302470800",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e2881ecd8fb9a4e6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-094aa6f3c274864bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.myGw",
            "aws_nat_gateway.myNat",
            "aws_subnet.mysubPub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130302470800:route-table/rtb-0651c5af635d116ae",
            "id": "rtb-0651c5af635d116ae",
            "owner_id": "130302470800",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dce525c952d0e583",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-094aa6f3c274864bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myGw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privRtAss1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04da772784a898a12",
            "route_table_id": "rtb-0e1b91161ef46ed63",
            "subnet_id": "subnet-09bf3a237cab13974"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.myGw",
            "aws_nat_gateway.myNat",
            "aws_route_table.privateRt",
            "aws_subnet.mysubPriv1",
            "aws_subnet.mysubPub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privRtAss2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018055e1c7267d056",
            "route_table_id": "rtb-0e1b91161ef46ed63",
            "subnet_id": "subnet-04f25b134f292deec"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.myGw",
            "aws_nat_gateway.myNat",
            "aws_route_table.privateRt",
            "aws_subnet.mysubPriv2",
            "aws_subnet.mysubPub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubRtAss1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a9f939bcd7eda13",
            "route_table_id": "rtb-0651c5af635d116ae",
            "subnet_id": "subnet-0723d7d329bf96dbc"
          },
          "dependencies": [
            "aws_internet_gateway.myGw",
            "aws_route_table.publicRt",
            "aws_subnet.mysubPub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubRtAss2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0953ae245fb80fd3a",
            "route_table_id": "rtb-0651c5af635d116ae",
            "subnet_id": "subnet-0cb17f2f5b6299763"
          },
          "dependencies": [
            "aws_internet_gateway.myGw",
            "aws_route_table.publicRt",
            "aws_subnet.mysubPub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysubPriv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130302470800:subnet/subnet-09bf3a237cab13974",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bf3a237cab13974",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "130302470800",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eksPriv1",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eksPriv1",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-094aa6f3c274864bc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysubPriv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130302470800:subnet/subnet-04f25b134f292deec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.30.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f25b134f292deec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "130302470800",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-priv2",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-priv2",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-094aa6f3c274864bc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysubPub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130302470800:subnet/subnet-0723d7d329bf96dbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.30.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0723d7d329bf96dbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "130302470800",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-pub1",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-pub1",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-094aa6f3c274864bc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysubPub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130302470800:subnet/subnet-0cb17f2f5b6299763",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.30.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb17f2f5b6299763",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "130302470800",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-pub2",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-pub2",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-094aa6f3c274864bc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:130302470800:vpc/vpc-094aa6f3c274864bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.30.0.0/16",
            "default_network_acl_id": "acl-01ba8b25336e48593",
            "default_route_table_id": "rtb-08f10c27ff3dc4862",
            "default_security_group_id": "sg-05b8d518d5ac443a0",
            "dhcp_options_id": "dopt-002816f751068f33d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-094aa6f3c274864bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08f10c27ff3dc4862",
            "owner_id": "130302470800",
            "tags": {
              "Name": "EKS-VPC"
            },
            "tags_all": {
              "Name": "EKS-VPC"
            }
          }
        }
      ]
    }
  ]
}